js homework 1 completed

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="text">
+    <div class="container">
       <div class="title">KODLUYORUZ</div>
       <div class="textOne">
         Merhaba, <span class="name"></span>! Hoş geldin!
       </div>
       <div class="textTwo">
-        <span class="time"></span> <br />
-        tarihinde Kodluyoruz Frontend Web Development Patikası'nın Javascript
+        <div class="timeDiv">
+          <span class="time"></span> <span id="dayName"></span>
+        </div>
+
+        tarihinde Kodluyoruz Frontend Web Development Patikası'nın Javascript<br />
         bölümü 1.ödevindesiniz.
       </div>
     </div>
