Start Reading btn hover effect activated

--- a/Bootstrap 5/bootstrap-medium-clone/index.html
+++ b/Bootstrap 5/bootstrap-medium-clone/index.html
@@ -74,7 +74,7 @@
               Discover stories, thinking, and expertise from writers on any
               topic.
             </p>
-            <a href="#" class="btn btn-dark rounded btn-outline-dark text-light"
+            <a href="#" class="btn btn-dark rounded text-light"
               >Start Reading</a
             >
           </div>
