added sticky property

--- a/Bootstrap 5/bootstrap-medium-clone/index.html
+++ b/Bootstrap 5/bootstrap-medium-clone/index.html
@@ -22,8 +22,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Medium Clone</title>
     <link rel="stylesheet" href="css/style.css" />
+    <title>Medium Clone</title>
   </head>
   <body>
     <!-- navbar start -->
@@ -502,7 +502,7 @@
             <!-- content box end -->
           </div>
         </div>
-        <div class="col-sm-4 padding-l">
+        <div class="col-sm-4 padding-l sticky">
           <h6 class="fw-bold mb-3">
             <small>DISCOVER MORE OF WHAT MATTERS TO YOU</small>
           </h6>
