Instagram Clone | Navbar design continued

--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -50,7 +50,7 @@
             <li><i class="fa-solid fa-house"></i></li>
             <li><i class="fa-brands fa-facebook-messenger"></i></li>
             <li><i class="fa-solid fa-compass"></i></li>
-            <li><i class="ri-heart-line"></i></li>
+            <li class="heart"><i class="ri-heart-line"></i></li>
           </ul>
         </nav>
       </div>
