--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -43,6 +43,8 @@
             class="searchInput"
             placeholder="Ara"
           />
+
+          <!-- searchInput'ta bootstrap5ten input group kullanılacak -->
           <i class="fas fa-search"></i>
         </div>
         <nav>
