--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -35,18 +35,20 @@
         <div class="font-logo">
           <a href="#" class="logo">Instagram</a>
         </div>
-        <div class="inputSearch">
+        <!-- input group start-->
+        <div class="input-group mt-2 inputGroupStyle">
+          <button class="btn btn-outline-dark" type="button" id="button-addon1">
+            <i class="fas fa-search"></i>
+          </button>
           <input
-            type="search"
-            name=""
-            id=""
-            class="searchInput"
+            type="text"
+            class="form-control"
             placeholder="Ara"
+            aria-label="Example text with button addon"
+            aria-describedby="button-addon1"
           />
-
-          <!-- searchInput'ta bootstrap5ten input group kullanılacak -->
-          <i class="fas fa-search"></i>
         </div>
+        <!-- input group end -->
         <nav>
           <ul>
             <li><i class="fa-solid fa-house"></i></li>
