Instagram Clone | Logo design

--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -36,7 +36,7 @@
           <a href="#" class="logo">Instagram</a>
         </div>
         <!-- input group start-->
-        <div class="input-group mt-2 inputGroupStyle">
+        <div class="input-group inputGroupStyle position-relative">
           <button class="btn btn-outline-dark" type="button" id="button-addon1">
             <i class="fas fa-search"></i>
           </button>
