Instagram Clone | Avatar profile added

--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -55,6 +55,15 @@
             <li><i class="fa-brands fa-facebook-messenger"></i></li>
             <li><i class="fa-solid fa-compass"></i></li>
             <li class="heart"><i class="ri-heart-line"></i></li>
+            <li>
+              <img
+                src="img/avatar 1.png"
+                width="25px"
+                height="25px"
+                style="margin-top: -5px; margin-left: -2px"
+                alt=""
+              />
+            </li>
           </ul>
         </nav>
       </div>
