Instagram Clone | Story Section Design

--- a/Bootstrap 5/bootstrap-instagram-clone/index.html
+++ b/Bootstrap 5/bootstrap-instagram-clone/index.html
@@ -58,8 +58,8 @@
             <li>
               <img
                 src="img/avatar 1.png"
-                width="25px"
-                height="25px"
+                width="30px"
+                height="30px"
                 style="margin-top: -5px; margin-left: -2px"
                 alt=""
               />
@@ -75,14 +75,89 @@
     <!-- container kısmı row olarak içerisinde row-sm-8 ve row-sm-4 olacak şekilde iki alt kısımdan oluşacak. -->
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
-          <div class="storyNav">
-            <!-- story bölümü snapchat gibi olan -->
+        <div class="col-sm-8">
+          <!-- story section start -->
+
+          <div class="row">
+            <div class="col-sm-12 offset-2 mt-2">
+              <div class="images justify-content-center align-items-center">
+                <div class="storyImageBox1 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 2.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">ayda0144</p>
+                </div>
+                <div class="storyImageBox2 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 3.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">kadird03</p>
+                </div>
+                <div class="storyImageBox3 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 4.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">melina44</p>
+                </div>
+                <div class="storyImageBox4 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 5.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">boraozat1</p>
+                </div>
+                <div class="storyImageBox5 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 6.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">dogudemirr</p>
+                </div>
+                <div class="storyImageBox6 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 7.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">arıncdl</p>
+                </div>
+                <div class="storyImageBox7 storyImageBox">
+                  <img
+                    class="storyImage"
+                    src="img/avatar 8.png"
+                    alt=""
+                    width="60px"
+                    height="60px"
+                  />
+                  <p class="text">kaya010</p>
+                </div>
+              </div>
+            </div>
           </div>
+          <!-- story section end -->
+          <!-- content start-->
+          <!-- content end -->
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8"></div>
         <div class="col-sm-4">
           <!-- sağda yer alan bölüm -->
         </div>
